--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Vite App</title>
+      <script type="module" crossorigin src="/learn-react/assets/index.c7267224.js"></script>
+      <link rel="modulepreload" href="/learn-react/assets/vendor.2669114c.js">
+      <link rel="stylesheet" href="/learn-react/assets/index.eaca959e.css">
     </head>
     <body>
         <div id="root"></div>
-        <script type="module" src="/src/main.tsx"></script>
+        
     </body>
 </html>
